Added metrics endpoint for Prometheus, pagination with page + limit for characters and now for the item pool, in order to not receive a 71298471947189179834 item json.
